media/css/teach/smarton.less
/* ... */
.js .smarton-topics:not(.has-touch) {
    .topic:after {
        display: block;
    }

    .topic-title {
        margin-top: 40px;
    }

    .topic-intro {
        display: block;
    }

    .inner {
        padding-top: 220px;
    }

    .topic.show {
        .topic-title {
            margin-top: 0;
        }

        .topic-intro {
            opacity: 0;
        }

        .inner {
            opacity: 1;
            padding-top: 140px;
        }

        &:after {
            opacity: 0;
        }
    }

    .topic-tracking {
        background-position: center 220px, center center;

        &.show {
            background-position: center 160px, center center;
        }
    }

    .topic-security {
        background-position: center 280px, center top;

        &.show {
            background-position: center 196px, center top;
        }
    }

    .topic-surveillance {
        background-position: center 315px, center top;

        &.show {
            background-position: center 240px, center top;
        }
    }
}

@-webkit-keyframes pulse {
    0%   { color: #ddd; }
    50%  { color: #eee; }
    100% { color: #ddd; }
}

@keyframes pulse {
    0%   { color: #ddd; }
    50%  { color: #eee; }
    100% { color: #ddd; }
}

.series-description {
    .font-size(@largeFontSize);
    background: #fff;
    text-align: center;

    &:before {
        background: inherit;
        clip-path: url(/media/img/teach/smarton/wobble.svg#wobble);
        content: '';
        display: block;
        height: 10px;
        width: 100%;
        position: absolute;
        top: -10px;
    }

    .content {
        max-width: @widthTablet;
    }

    p {
        margin: 30px @gridColumnWidth;
    }

    h2 {
        .font-size(36px);
        font-style: italic;
        margin: @baseLine 0;
    }

    .smarton-steps {
        list-style: none;
        margin: @baseLine auto;
        font-weight: bold;
        color: #3a454e;
        .font-size(@largeFontSize);
        .flexbox;

        li {
            display: inline-block;
            margin: 0 10px;
            width: 24%;
            position: relative;

            &:after {
                content: '';
                display: block;
                width: 25px;
                height: 30px;
                background: url('/media/img/teach/smarton/step-arrow.svg') 0 0 no-repeat;
                position: absolute;
                right: -25px;
                top: -3px;
            }

            &:last-child:after {
                display: none;
            }
        }
    }
}

@media only screen and (max-width: @breakTablet) {
    .smarton-topics .topic {
        float: none;
        margin: 0 auto @baseLine;
    }

    .series-description {
        p {
            margin: 30px 0;
        }

        .smarton-steps {
            display: block;
            width: 50%;

            li {
                width: auto;
                display: block;
                text-align: left;

                &:after {
                    display: none;
                }
            }
        }
    }
}

@media screen and (-webkit-min-device-pixel-ratio: 1.5),
       screen and (min-resolution: 1.5dppx),
       screen and (min-resolution: 144dpi) {

    .smarton-topics {
        .topic-tracking {
            background-image: url('/media/img/teach/smarton/tracking/tracking-landing-high-res.png'),
                              url('/media/img/teach/smarton/tracking/tracking-landing-bg-high-res.png');
            -webkit-background-size: 260px 260px, 500px 368px;
                    background-size: 260px 260px, 500px 368px;
        }

        .topic-security {
            background-image: url('/media/img/teach/smarton/security/security-landing-high-res.png'),
                              url('/media/img/teach/smarton/security/security-landing-bg-high-res.png');
            -webkit-background-size: 165px 200px, 260px 410px;
                    background-size: 165px 200px, 260px 410px;
        }

        .topic-surveillance {
            background-image: url('/media/img/teach/smarton/surveillance/surveillance-landing-high-res.png'),
                              url('/media/img/teach/smarton/surveillance/surveillance-landing-bg-high-res.png');
            -webkit-background-size: 220px 125px, 152px 177px;
                    background-size: 220px 125px, 152px 177px;
        }
    }
}

